--- a/src/graphics/styles.css
+++ b/src/graphics/styles.css
@@ -15,6 +15,11 @@
 	font-size: 18px;
 }
 
+.load-button {
+	font-size: 16px;
+	border-radius: 10px;
+}
+
 .render-button {
 	min-width: 200px;
 	border-radius: 10px;
