--- a/src/graphics/main.ui
+++ b/src/graphics/main.ui
@@ -162,38 +162,10 @@
           </packing>
         </child>
         <child>
-          <object class="GtkEntry" id="z_angle_delta_entry">
+          <object class="GtkEntry" id="angle_delta_entry">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
-            <property name="placeholder-text" translatable="yes">delta z</property>
-            <style>
-              <class name="option-contents"/>
-            </style>
-          </object>
-          <packing>
-            <property name="left-attach">4</property>
-            <property name="top-attach">4</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkEntry" id="y_angle_delta_entry">
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="placeholder-text" translatable="yes">delta y</property>
-            <style>
-              <class name="option-contents"/>
-            </style>
-          </object>
-          <packing>
-            <property name="left-attach">3</property>
-            <property name="top-attach">4</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkEntry" id="x_angle_delta_entry">
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="placeholder-text" translatable="yes">delta x</property>
+            <property name="placeholder-text" translatable="yes">delta angle</property>
             <style>
               <class name="option-contents"/>
             </style>
@@ -201,6 +173,7 @@
           <packing>
             <property name="left-attach">2</property>
             <property name="top-attach">4</property>
+            <property name="width">2</property>
           </packing>
         </child>
         <child>
@@ -306,6 +279,25 @@
           <packing>
             <property name="left-attach">4</property>
             <property name="top-attach">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkComboBoxText" id="angle_combo_box">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="active-id">x_combo</property>
+            <items>
+              <item id="x_combo" translatable="yes">x</item>
+              <item id="y_combo" translatable="yes">y</item>
+              <item id="z_combo" translatable="yes">z</item>
+            </items>
+            <style>
+              <class name="option-contents"/>
+            </style>
+          </object>
+          <packing>
+            <property name="left-attach">4</property>
+            <property name="top-attach">4</property>
           </packing>
         </child>
       </object>
